test/data/syntax-errors/missing-loop.iki
while false or true
  write 0;
end;
